--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0"
+        "php": "^8.1",
+        "laravel/framework": "^10.10",
+        "laravel/nova": "~4.0"
     },
     "autoload": {
         "psr-4": {
