--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "require": {
         "php": "^8.1",
         "laravel/framework": "^10.10",
-        "laravel/nova": "~4.0"
+        "laravel/nova": "~4.0",
+        "jshxl/primevue": "^1.4.3"
     },
     "autoload": {
         "psr-4": {
