--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "php": "^8.1",
         "laravel/framework": "^10.10",
         "laravel/nova": "~4.0",
-        "jshxl/primevue": "^1.4.3"
+        "jshxl/list-box": "^1.8.6"
     },
     "autoload": {
         "psr-4": {
